[GN] Fix "gn gen --ide=vs" to ignore bundle_data targets.

In order to keep the BUILD.gn more readable by avoiding conditionals,
Chromium defines bundle_data on every platforms (as in the absence of
create_bundle they are just no-op stamp targets).

Fix "gn gen --ide=vs" to ignore bundle_data targets but not the
create_bundle targets (as there should be no such targets on Windows).

BUG=595915

Review URL: https://codereview.chromium.org/1811203003

Cr-Commit-Position: refs/heads/master@{#382197}

Former-commit-id: a90c62f80a74f7abc647234f70ac596e86bf3dd2